site/css/styles.css
* {
    box-sizing: border-box;
  }
/*****Body *****/
body {
    background-color: #ffffff;
    font-family: Arial, Helvetica, sans-serif;
  }
.menu_instance {
    border: 0px;
    padding-top: 2%;
    background-color: #999999;
}
.menu_title {
    font-size: 1.2em;
    font-weight: bold;
}
/*****HEADER****/
/*Collapsable buttom styling*/
.navbar-default .navbar-toggle {
    border-color: #000000;
}
.navbar-default .navbar-toggle .icon-bar {
    background-color: #000000;
}
/*Collapsable buttom when focused or hovered*/
.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
    background-color: inherit;
    border-color: #dddddd; 
}
.navbar-default .navbar-toggle:focus .icon-bar,.navbar-default .navbar-toggle:hover .icon-bar {
    background-color: #dddddd;
}
/*Collapsable menu styling */
#header-nav {
    border: 2px solid #000000;
    height: auto;
    border-radius: 0px;
    background-color: #999999;
    color: #000000;
    font-weight: bold;
}
#brand-color {
	font-size: 1.6em;
	color: #000000;
}
/*****Extra small devices****/
#main-content .col-xs-12 {
    width: 80%;
    margin-right: 10%;
    margin-left: 10%;
}
/*****Drop down menu stalyng on visible-xs*****/
.navbar-nav {
	margin: 0px -15px;
	background-color: #ffffff;
}
.navbar-default .navbar-nav > li > a {
    color: #777;
}
#collapsable-nav {
    color: #000000;
    text-align: center;
}
#nav-list a {
    font-size: 1.5em;
    border: 2px solid #000000;
}
#nav-list a:hover {
    background: #E7E7E7;
}

